--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "chart.js": "^2.9.3",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.29.1",
+    "net": "^1.0.2",
     "ng2-nouislider": "1.8.3",
     "nouislider": "14.6.3",
     "rxjs": "^7.5.5",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
