--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
+   
   "newProjectRoot": "projects",
   "projects": {
     "argon-design-system-angular": {
@@ -151,6 +152,7 @@
   },
   "defaultProject": "argon-design-system-angular",
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "packageManager": "npm"
   }
 }
