--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-
+/dist
 /tmp
 /out-tsc
 
@@ -38,4 +39,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-
+package-lock.json
