--- a/package.json
+++ b/package.json
@@ -12,37 +12,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.9",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "^13.3.9",
-    "@angular/compiler": "^13.3.9",
-    "@angular/core": "^13.3.9",
-    "@angular/elements": "^13.3.9",
-    "@angular/forms": "^13.3.9",
-    "@angular/localize": "^13.3.9",
-    "@angular/platform-browser": "^13.3.9",
-    "@angular/platform-browser-dynamic": "^13.3.9",
-    "@angular/router": "^13.3.9",
+    "@angular/animations": "13.3.1",
+    "@angular/cdk": "^13.3.1",
+    "@angular/common": "^13.3.1",
+    "@angular/compiler": "^13.3.1",
+    "@angular/core": "^13.3.1",
+    "@angular/elements": "^13.3.1",
+    "@angular/forms": "^13.3.1",
+    "@angular/localize": "13.3.1",
+    "@angular/platform-browser": "^13.3.1",
+    "@angular/platform-browser-dynamic": "^13.3.1",
+    "@angular/router": "^13.3.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "@popperjs/core": "^2.11.4",
-    "bootstrap": "^5.1.3",
-    "chart.js": "^2.9.3",
+    "bootstrap": "^5.3.2",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.29.1",
-    "net": "^1.0.2",
     "ng2-nouislider": "1.8.3",
-    "ngx-pagination": "^6.0.3",
     "nouislider": "14.6.3",
     "rxjs": "^7.5.5",
-    "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.9",
-    "@angular/cli": "^13.3.9",
-    "@angular/compiler-cli": "^13.3.9",
-    "@angular/language-service": "^13.3.9",
+    "@angular-devkit/build-angular": "^13.3.1",
+    "@angular/cli": "^13.3.1",
+    "@angular/compiler-cli": "^13.3.1",
+    "@angular/language-service": "13.3.1",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "16.3.2",
