--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "@angular/router": "^13.3.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "@popperjs/core": "^2.11.4",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^2.9.3",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.29.1",
+    "net": "^1.0.2",
     "ng2-nouislider": "1.8.3",
+    "ngx-pagination": "^6.0.3",
     "nouislider": "14.6.3",
     "rxjs": "^7.5.5",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
